# llvm-ir

./: Cargo.toml  build.rs
src/: basicblock.rs  constant.rs  debugloc.rs  function.rs  instruction.rs  iterators.rs  lib.rs  module.rs  name.rs  operand.rs  predicates.rs  terminator.rs  types.rs
tests/: basic_tests.rs  llvm_17_tests.rs  llvm_8_tests.rs
