[package]
name = "llvm-ir"
version = "0.11.0"
authors = ["Craig Disselkoen <craigdissel@gmail.com>"]
edition = "2018"
description = "LLVM IR in natural Rust data structures"
documentation = "https://docs.rs/llvm-ir"
repository = "https://github.com/cdisselkoen/llvm-ir"
readme = "README.md"
keywords = ["llvm", "ir"]
license = "MIT"

[dependencies]
either = "1.9"
log = "0.4"
serde = { version = "1.0.201", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0.117", optional = true }

[dev-dependencies]
env_logger = "0.10"
itertools = "0.11"

[features]
# Select the LLVM version to be compatible with.
# You _must_ enable exactly one of the following features.
llvm-9 = ["llvm-9-or-lower", "llvm-9-or-greater"]
llvm-10 = ["llvm-10-or-lower", "llvm-10-or-greater"]
llvm-11 = ["llvm-11-or-lower", "llvm-11-or-greater"]
llvm-12 = ["llvm-12-or-lower", "llvm-12-or-greater"]
llvm-13 = ["llvm-13-or-lower", "llvm-13-or-greater"]
llvm-14 = ["llvm-14-or-lower", "llvm-14-or-greater"]
llvm-15 = ["llvm-15-or-lower", "llvm-15-or-greater"]
llvm-16 = ["llvm-16-or-lower", "llvm-16-or-greater"]
llvm-17 = ["llvm-17-or-lower", "llvm-17-or-greater"]

###
# For convenience, these automatically-enabled features allow us to avoid
# checking complex combinations of features all the time. They are not meant to
# be manually enabled; use the above llvm-x features instead
llvm-9-or-greater = []
llvm-10-or-greater = ["llvm-9-or-greater"]
llvm-11-or-greater = ["llvm-10-or-greater"]
llvm-12-or-greater = ["llvm-11-or-greater"]
llvm-13-or-greater = ["llvm-12-or-greater"]
llvm-14-or-greater = ["llvm-13-or-greater"]
llvm-15-or-greater = ["llvm-14-or-greater"]
llvm-16-or-greater = ["llvm-15-or-greater"]
llvm-17-or-greater = ["llvm-16-or-greater"]

llvm-9-or-lower = ["llvm-10-or-lower"]
llvm-10-or-lower = ["llvm-11-or-lower"]
llvm-11-or-lower = ["llvm-12-or-lower"]
llvm-12-or-lower = ["llvm-13-or-lower"]
llvm-13-or-lower = ["llvm-14-or-lower"]
llvm-14-or-lower = ["llvm-15-or-lower"]
llvm-15-or-lower = ["llvm-16-or-lower"]
llvm-16-or-lower = ["llvm-17-or-lower"]
llvm-17-or-lower = []
###

# The `strict-versioning` feature requires an exact match between the
# system LLVM version and the version selected with the above features.
#
# The `?` in the below ensures that we only enable the feature if the dependency
# is already present.
# This avoids activating all the optional dependencies when `strict-versioning`
# is activated.
strict-versioning = []

# The `prefer-dynamic` feature is only available on llvm-sys versions >= 120.
prefer-dynamic = []

no-llvm = []
json = ["serde", "serde_json", "no-llvm"]

[package.metadata.docs.rs]
# Generate docs.rs documentation with the llvm-10 feature
features = ["llvm-10"]
